# Laboratoria-MO

./: CMakeLists.txt  README.md
lab1/: README.md  lab1.c
lab10/: BME.txt  PME.txt  PMT.txt  README.md  errors.txt  lab10.c  results.txt  wykres_BME.gp  wykres_PME.gp  wykres_PMT.gp  wykres_błędy.gp
lab11/: CALERF.cpp  CALERF.h  KMB.gp  KMB.txt  laasonen.txt  lab11.cpp  lassonen.gp
lab12/: README.md  wskazówki.txt
lab13/: README.md
lab2/: README.md  lab2.c  wykres.gp  wykres2.gp  wykres3.gp
lab3/: README.md  lab3.c
lab4/: README.md  lab4.c
lab5/: README.md  lab5.c  wskazówki.txt
lab6/: README.md  dane.txt  lab6.c
lab7/: README.md  dane.txt  lab7.c
lab8/: README.md  double_errors.txt  lab8.cpp  long_double_errors.txt  pomoc.txt  wykres.gp  wykres2.gp
lab9/: README.md  errors.txt  lab9.c  wykres.gp  wykres2.gp  wyniki.txt
